--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "flit_core.buildapi"
 [project]
 name = "dashing"
 authors = [{ name = "Federico Ceratto", email = "federico@debian.org" }]
-license = { file = "LICENSE" }
+license = { file = "LICENSES/LGPL-3.0-or-later.txt" }
 classifiers = [
     "Development Status :: 4 - Beta",
     "Environment :: Console",
